dark mode fixes
Move the JS code back to CSS, add a dark class, and then when
using dark mode, add a dark class to the pertinent elements.

--- a/popup/tabhunter.css
+++ b/popup/tabhunter.css
@@ -1,5 +1,7 @@
 /* tabhunter.css -- See LICENSE.txt for copyright and license details. */
 
+/* Color names and values from https://design.firefox.com/photon/visuals/color.html */
+
 * {
   box-sizing: border-box;
 }
@@ -18,6 +20,11 @@ body {
   margin: 0 auto;
   padding: 2px;
   height: inherit;
+}
+
+body.dark {
+  background: rgb(15, 15, 15);
+  color: #f9f9fa;
 }
 
 div#form {
@@ -53,8 +60,28 @@ input.input-text {
   border-radius: 3px;
 }
 
+input.input-text.dark {
+  background: #2a2a2e;
+  color: #f9f9fa;
+  border-color: #bbb;
+}
+
 input.input-text:focus {
     border-color: #000;
+}
+
+input.input-text.dark:focus {
+    border-color: #d9d9d9;
+}
+
+input#command_key.dark {
+  background: #2a2a2e;
+  color: #f9f9fa;
+  border-color: #bbb;
+}
+
+input#command_key.dark:focus {
+   border-color: #d9d9d9;
 }
 
 .buttondiv {
@@ -116,6 +143,19 @@ input.xbutton {
     margin-right: 0px;
 }
 
+input.xbutton.dark {
+  background-color: #2a2a2e;
+  color: #f9f9fa;
+}
+
+input.xbutton.dark.highlighted {
+  border-color: rgb(146, 146, 146);
+}
+
+input.xbutton.dark.pressed {
+  border-color: #222222;
+}
+
 label.checkbox {
     font-size: 8pt;
 }
@@ -134,6 +174,26 @@ label.checkbox {
 
 .button.pressed {
     background-color: #ddd;
+}
+
+.button.dark {
+  border-color: #d7d7db; /* grey 30 */
+  background: #2a2a2e; /* Grey 80 */
+  color: #f9f9fa; /* Grey 10 */
+}
+
+.button.dark:disabled {
+  border-color: #737373; /* grey 50 */
+  background: #4a4a4f; /* Grey 60 */
+  color: #b1b1b3; /* Grey 40 */
+}
+
+.button.dark.highlighted {
+    border-color: rgb(146, 146, 146);
+}
+
+.button.dark.pressed {
+    background-color: #222;
 }
 
 div#main {
@@ -155,6 +215,17 @@ ul#list {
     padding-left: 2px;
     font-size: 9pt;
     background: white;
+}
+
+ul#list.dark {
+    border-color: rgb(146, 146, 146);
+    background: #2a2a2a;
+    color: #f9f9fa;
+    scrollbar-color: #f9f9fa #2a2a2e;
+}
+
+ul#list.dark li.selected {
+    background-color: #002275; /* Blue 80 */
 }
 
 ul#list li {
@@ -227,4 +298,14 @@ div#statusbar-text.hide {
 div#statusbar-text.show {
     display: block;
     visibility: visible;
+}
+
+select#bookmarkList.dark {
+  background: #2a2a2e; /* Grey 80 */
+  color: #f9f9fa; /* Grey 10 */
+}
+
+select#windowList.dark {
+  background: #2a2a2e; /* Grey 80 */
+  color: #f9f9fa; /* Grey 10 */
 }
